[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Main_Character/old-man-2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Main_Character/old-man-3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Main_Character/old-man-8.png" type="Texture" id=3]
[ext_resource path="res://Assets/Main_Character/old-man-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Main_Character/old-man-5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Main_Character/old-man-4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Main_Character/old-man-7.png" type="Texture" id=7]
[ext_resource path="res://Assets/Main_Character/old-man-6.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Main_Character_Animation.gd" type="Script" id=9]
[ext_resource path="res://Assets/Audio/footsteps-on-wooden-floor-6803.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/Main_Character/Main_Character_Gun/old-man-gun-5.png" type="Texture" id=11]
[ext_resource path="res://Assets/Main_Character/Main_Character_Gun/old-man-gun-6.png" type="Texture" id=12]
[ext_resource path="res://Assets/Main_Character/Main_Character_Gun/old-man-gun-3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Main_Character/Main_Character_Gun/old-man-gun-8.png" type="Texture" id=14]
[ext_resource path="res://Assets/Main_Character/Main_Character_Gun/old-man-gun-1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Main_Character/Main_Character_Gun/old-man-gun-2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Main_Character/Main_Character_Gun/old-man-gun-4.png" type="Texture" id=17]
[ext_resource path="res://Assets/Main_Character/Main_Character_Gun/old-man-gun-7.png" type="Texture" id=18]
[ext_resource path="res://Assets/Main_Character/Main_Character_Shoot/old-man-gun-shoot-1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Audio/Shotgun_Sound.ogg" type="AudioStream" id=20]
[ext_resource path="res://Assets/Audio/shoot.ogg" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": false,
"name": "Main_Character_Gun_Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "Main_Character_Walking",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 14 ) ],
"loop": true,
"name": "Main_Character_Gun_Walking",
"speed": 8.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": false,
"name": "Main_Character_Shooting",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Main_Character_Idle",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.2561
height = 170.791

[node name="Main_Character_Animation" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 257
script = ExtResource( 9 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 1.00329, 0.154302 )
frames = SubResource( 1 )
animation = "Main_Character_Shooting"
flip_h = true

[node name="Gun_Sight" type="Position2D" parent="Player"]
position = Vector2( 59.717, 8.069 )

[node name="Gun_Flipped" type="Position2D" parent="Player"]
position = Vector2( -58.467, 8.069 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4.91632, 26.1607 )
rotation = 0.0255716
shape = SubResource( 2 )

[node name="Steps_SoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = 24.0

[node name="Shoot_SoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
